--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,5 +12,5 @@ jobs:
         #   username: ${{ secrets.USERNAME }}
         #   key: ${{ secrets.KEY }}
         #   port: ${{ secrets.PORT }}
-          script: |
-            ./deploy.sh
+          # script: |
+          #   ./deploy.sh
