--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,10 +7,10 @@ jobs:
     steps:
       - name: executing remote ssh commands using password using ssh-actions
         uses: appleboy/ssh-action@v0.1.10
-        # with:
-        #   host: ${{ secrets.HOST }}
-        #   username: ${{ secrets.USERNAME }}
-        #   key: ${{ secrets.KEY }}
-        #   port: ${{ secrets.PORT }}
-          # script: |
-          #   ./deploy.sh
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            ./deploy.sh
