--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Stop Uvicorn Server
         run: |
           cd backend/fastapi
-          pkill -f uvicorn
+          pkill -f uvicorn || true
           
