--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,6 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            cd $HOME/barunChuk/sh
+            cd $HOME/work/barunChuk/sh
             chmod +x deploy.sh
             ./deploy.sh
