--- a/backend/fastapi/requirements.txt
+++ b/backend/fastapi/requirements.txt
@@ -26,15 +26,15 @@ opencv-python==4.11.0.86
 opt_einsum==3.4.0
 packaging==25.0
 pillow==11.2.1
-pip==21.2.3
 protobuf==4.25.8
 pycparser==2.22
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 scipy==1.13.1
 sentencepiece==0.2.0
-setuptools==57.4.0
 six==1.17.0
 sounddevice==0.5.2
 Werkzeug==3.1.3
 zipp==3.23.0
+uvicorn==0.34.3
+fastapi==0.115.12
