--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,38 @@
-version: "3.3"
+# barunChuk/docker-compose.yml (EC2 개발 환경용)
+version: '3.8' # deploy 섹션을 위해 3.x 이상 버전을 권장합니다.
+
 services:
   frontend:
     build: ./frontend
+    container_name: barunchuk-frontend-dev
     ports:
-      - "3000:3000"
+      - "3000:3000" # 호스트(EC2)의 3000번 포트를 컨테이너의 3000번 포트에 연결
     networks:
       - barunchuk
+    volumes:
+      - ./frontend:/app # ⭐ EC2의 frontend 폴더를 컨테이너 /app에 마운트 (이것이 '바로바로' 반영의 핵심)
+      - /app/node_modules # node_modules는 컨테이너 내부에 생성되도록 예외 처리
 
   backend-node:
     build: ./backend/server
+    container_name: barunchuk-backend-node-dev
     ports:
       - "5000:5000"
     networks:
       - barunchuk
+    volumes:
+      - ./backend/server:/app # EC2의 backend/server 폴더를 컨테이너 /app에 마운트
+      - /app/node_modules
 
   backend-python:
     build: ./backend/fastapi
+    container_name: barunchuk-backend-python-dev
     ports:
       - "8000:8000"
     networks:
       - barunchuk
+    volumes:
+      - ./backend/fastapi:/app # EC2의 backend/fastapi 폴더를 컨테이너 /app에 마운트
 
 networks:
   barunchuk:
