--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "cors": "^2.8.5",
+    "ws": "^8.17.0"
   }
 }
