--- a/backend/fastapi/requirements.txt
+++ b/backend/fastapi/requirements.txt
@@ -1,40 +1,5 @@
-absl-py==2.3.0
-attrs==25.3.0
-blinker==1.9.0
-cffi==1.17.1
-click==8.1.8
-contourpy==1.3.0
-cycler==0.12.1
-Flask==3.1.1
-flask-cors==6.0.1
-flatbuffers==25.2.10
-fonttools==4.58.2
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.6
-kiwisolver==1.4.7
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-mediapipe==0.10.21
-ml_dtypes==0.5.1
+fastapi==0.111.0
+uvicorn==0.29.0
+Pillow==10.3.0
+mediapipe==0.10.11
 numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-opt_einsum==3.4.0
-packaging==25.0
-pillow==11.2.1
-protobuf==4.25.8
-pycparser==2.22
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-scipy==1.13.1
-sentencepiece==0.2.0
-six==1.17.0
-sounddevice==0.5.2
-Werkzeug==3.1.3
-zipp==3.23.0
-uvicorn==0.34.3
-fastapi==0.115.12
