--- a/backend/fastapi/Dockerfile
+++ b/backend/fastapi/Dockerfile
@@ -1,31 +1,28 @@
-# FROM python:3.11
-# WORKDIR /app
-# COPY requirements.txt .
-# RUN pip install -r requirements.txt
-# COPY . .
-# EXPOSE 8000
-# CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
-
-# backend/fastapi/Dockerfile
-# MediaPipe 의존성인 libgl1-mesa-glx, libsm6, libxext6, libxrender1 설치 추가
 FROM python:3.11-slim-buster
 
-WORKDIR /app
+# 환경 변수 설정 (옵션)
+ENV PYTHONUNBUFFERED 1
 
-# apt 업데이트 및 필요한 패키지 설치 (MediaPipe 의존성)
+# 필요한 시스템 패키지 설치
+# MediaPipe/OpenCV가 의존하는 gstreamer 관련 라이브러리 및 기타 종속성 설치
 RUN apt-get update && apt-get install -y \
     libgl1-mesa-glx \
+    libgstreamer-plugins-base1.0-0 \
+    libgstreamer1.0-0 \
+    libglib2.0-0 \
     libsm6 \
     libxext6 \
     libxrender1 \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
-# requirements.txt 복사 및 의존성 설치
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt 
+WORKDIR /app
 
-# 모든 소스 코드 복사
+# requirements.txt 복사 및 Python 의존성 설치
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# 애플리케이션 코드 복사
 COPY . .
 
-EXPOSE 8000
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
