--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -5,6 +5,7 @@
     "express": "^5.1.0",
     "http-proxy-middleware": "^2.0.6",
     "cors": "^2.8.5",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "socket.io": "^4.7.5" 
   }
 }
