--- a/backend/fastapi/Dockerfile
+++ b/backend/fastapi/Dockerfile
@@ -3,14 +3,6 @@ FROM python:3.11-slim-buster
 # 환경 변수 설정 (옵션)
 ENV PYTHONUNBUFFERED 1
 
-# 필요한 시스템 패키지 설치
-RUN apt-get update && apt-get install -y \
-    libgstreamer-plugins-base1.0-0 \
-    libgstreamer1.0-0 \
-    libglib2.0-0 \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
-
 WORKDIR /app
 
 # requirements.txt 복사 및 Python 의존성 설치
@@ -20,4 +12,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # 애플리케이션 코드 복사
 COPY . .
 
+EXPOSE 8000
+
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+
