--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,25 @@
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+
+RUN npm ci
+
+COPY . .
+
+RUN npm run build
+
 FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json ./
+COPY package*.json ./
 
-RUN npm run build
+RUN npm ci --omit=dev
 
-COPY . .
+COPY --from=builder /app/dist ./dist
 
 EXPOSE 3001
-CMD ["serve", "-s", "dist", "-l", "3000"]
+
+CMD ["serve", "-s", "dist", "-l", "3001"]
