--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,16 +2,17 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json ./
+# 전체 복사
+COPY . .
 
 # 의존성 설치
 RUN npm install
 
-# build 실행
+# 웹팩 빌드
 RUN npm run build
 
-# 나머지 파일 복사
-COPY . .
+# 정적 파일 서빙을 위해 serve 설치
+RUN npm install -g serve
 
 EXPOSE 3001
 CMD ["serve", "-s", "dist", "-l", "3001"]
