--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,10 @@
   "name": "frontend",
   "version": "1.0.0",
   "main": "index.js",
-"scripts": {
-  "start": "serve -s dist -l 3001",
-  "dev": "webpack serve --mode development",
-  "build": "webpack --mode production",
-  "test": "echo \"No tests yet\""
-},
+  "scripts": {
+    "start": "webpack serve --config webpack.config.js",
+    "build": "webpack --config webpack.config.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,9 +14,7 @@
     "@mediapipe/tasks-vision": "0.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "^5.0.1",
     "react-webcam": "^7.2.0",
-    "serve": "^14.2.4",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
