--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,12 +56,12 @@ jobs:
 
       # --- Deploy to EC2 ---
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.1 # 최신 버전 사용 권장
+        uses: appleboy/ssh-action@v1.0.1 
         with:
-          host: ${{ secrets.HOST }} # HOST -> HOST (명확성)
-          username: ${{ secrets.USERNAME }} # USERNAME -> USER (명확성)
-          key: ${{ secrets.KEY }} # KEY -> KEY (명확성)
-          port: ${{ secrets.PORT }} # PORT -> PORT (명확성)
+          host: ${{ secrets.HOST }} 
+          username: ${{ secrets.USERNAME }} 
+          key: ${{ secrets.KEY }} 
+          port: ${{ secrets.PORT }} 
           script: |
             # EC2 서버에 로그인 후 실행할 명령들
             # 1. 배포할 프로젝트 디렉토리로 이동
@@ -73,8 +73,9 @@ jobs:
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
             # 3. 최신 Docker 이미지들을 Pull
-            #    docker-compose.yml에 정의된 서비스 이름(frontend, backend-node, backend-python, db) 사용
-            docker-compose pull frontend backend-node backend-python db # db는 Docker Hub에서 공식 이미지 pull
+            #    docker-compose.yml에 정의된 서비스 이름(frontend, backend-node, backend-python) 사용
+            docker-compose pull frontend backend-node backend-python 
+            # db는 Docker Hub에서 공식 이미지 pull
 
             # 4. Docker Compose 서비스 재시작 (새로운 이미지로)
             docker-compose up -d --remove-orphans
