--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,11 @@
   "name": "frontend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js"
-  },
+"scripts": {
+  "build": "webpack --config webpack.config.js",
+  "start": "serve -s dist -l 3001"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
