--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
 "scripts": {
   "build": "webpack --config webpack.config.js",
-  "start": "serve -s dist -l 3001"
+  "start": "serve -s dist -l 3001",
+  "st": "webpack serve --config webpack.config.js"
 },
 
   "keywords": [],
